--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,9 +1,12 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-app-deployment  # Имя твоего деплоймента
+  name: my-app-deployment
+  labels:
+    app: my-app
+    version: v1
 spec:
-  replicas: 1  # Для интерактива лучше 1 копия
+  replicas: 1
   selector:
     matchLabels:
       app: my-app
@@ -11,11 +14,33 @@ spec:
     metadata:
       labels:
         app: my-app
+        version: v1
+      annotations:
+        # Важно для Prometheus (этап 5)
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8080"
+        prometheus.io/path: "/metrics"
     spec:
       containers:
       - name: my-app-container
-        image: vadimzakharov9243/myapp:latest  # Твой образ
+        image: vadimzakharov9243/myapp:latest
+        imagePullPolicy: Always
+        # Для интерактивной работы (kubectl attach)
+        stdin: true
+        tty: true
         ports:
-        - containerPort: 8080  # Если нужно
-        stdin: true      # ⬅️ Включаем ввод с клавиатуры
-        tty: true        # ⬅️ Включаем терминал
+        - name: metrics
+          containerPort: 8080  # Порт для метрик Prometheus
+          protocol: TCP
+        # Ресурсы важны для HPA (этап 8)
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "100m"
+          limits:
+            memory: "128Mi"
+            cpu: "200m"
+        # Для диагностики (необязательно)
+        env:
+        - name: APP_VERSION
+          value: "v1"
